--- a/www/index.html
+++ b/www/index.html
@@ -33,35 +33,24 @@
         <meta name="msapplication-tap-highlight" content="no">
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
         <link rel="stylesheet" type="text/css" href="css/index.css">
-        <title>Hello World</title>
+        <title>APP</title>
     </head>
     <body>
         <div class="app" data-ng-controller="gpsCtrl" data-ng-init="init()">
-            <h1>Apache Cordova</h1>
-            <div id="deviceready" class="blink">
-                <p class="event listening">Connecting to Device</p>
-                <p class="event received">Device is Ready</p>
-            </div>
             <p>Hello {{name}}</p>
-            <p id="geolocation">
-               <!--  Latitude : {{$geolocation.position.coords.latitude}} <br />
-                Longitude : {{$geolocation.position.coords.longitude}} <br />
-                vitesse : {{$geolocation.position.coords.speed}} <br />
-                Time : {{location.coords.longitude}} <br /> -->
 
+            <p id="geolocation">
+                Init Latitude : {{initLatitude}} <br />
+                Init Longitude : {{initLongitude}} <br />
                 Latitude : {{latitude}} <br />
                 Longitude : {{longitude}} <br />
                 Speed : {{speed}} <br />
                 Time : {{timestamp}} <br />
-              <!--   Longitude : {{$geolocation.position.coords.longitude}} <br />
-                vitesse : {{$geolocation.position.coords.speed}} <br />
-                Time : {{location.coords.longitude}} <br /> -->
             </p>
         </div>
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/angular.min.js"></script>
         <script type="text/javascript" src="js/util.js"></script>
-        <script type="text/javascript" src="js/ngGeolocation.js"></script>
         <script type="text/javascript" src="js/gps.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
     </body>
