--- a/www/index.html
+++ b/www/index.html
@@ -28,28 +28,85 @@
             * Disables use of inline scripts in order to mitigate risk of XSS vulnerabilities. To change this:
                 * Enable inline JS: add 'unsafe-inline' to default-src
         -->
-        <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: https://ssl.gstatic.com 'unsafe-eval'; style-src 'self' 'unsafe-inline'; media-src *">
+        <meta http-equiv="Content-Security-Policy" content="media-src *">
         <meta name="format-detection" content="telephone=no">
         <meta name="msapplication-tap-highlight" content="no">
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
         <link rel="stylesheet" type="text/css" href="css/index.css">
+        <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+
         <title>APP</title>
     </head>
     <body>
-        <div class="app" data-ng-controller="gpsCtrl" data-ng-init="init()">
-            <p>Hello {{name}}</p>
+        <div class="" data-ng-controller="gpsCtrl" data-ng-init="init()">
+            <ul class="list-group">
+                <li class="list-group-item">
+                    <div class="row">
+                        <div class="col-md-6">
+                            Start Position
+                        </div>
+                        <div class="col-md-6">
+                            Lat: {{initLatitude}}
+                            <br />
+                            Lng: {{initLongitude}}
+                        </div>
+                    </div>
+                </li>
+                <li class="list-group-item">
+                    <div class="row">
+                        <div class="col-md-6">
+                            Running Position
+                        </div>
+                        <div class="col-md-6">
+                            Lat: {{latitude}}
+                            <br />
+                            Lng: {{longitude}}
+                            <br />
+                            Speed: {{speed}}
+                            <br />
+                            Time: {{timestamp}}
+                            <br />
+                            {{ errorGps }}
+                        </div>
+                    </div>
+                </li>
+                <li class="list-group-item">
+                    <div class="row">
+                        <div class="col-md-6">
+                            Chrono
+                        </div>
+                        <div class="col-md-6">
+                                {{ minute }}:{{ second }}:{{ centiSecond }}
+                        </div>
+                    </div>
+                </li>
+            </ul>
 
-            <p id="geolocation">
-                Init Latitude : {{initLatitude}} <br />
-                Init Longitude : {{initLongitude}} <br />
-                Latitude : {{latitude}} <br />
-                Longitude : {{longitude}} <br />
-                Speed : {{speed}} <br />
-                Time : {{timestamp}} <br />
-            </p>
+            <div class="row">
+                <div class="col-md-12">
+                    <!-- <div class="btn-group" role="group"> -->
+                      <button type="button" class="btn btn-success" 
+                                ng-disabled = "!canStart"
+                                ng-click="startChrono()">
+                            Start
+                      </button>
+                      <button type="button" class="btn btn-warning" 
+                                ng-click="reinitData()">
+                            Reset
+                      </button>
+                      <button type="button" class="btn btn-danger" 
+                                ng-disabled = "canStart"
+                                ng-click="stopChrono()">
+                            Stop
+                      </button>
+                    <!-- </div> -->
+                </div>
+            </div>
         </div>
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/angular.min.js"></script>
+        <script type="text/javascript" src="ui-bootstrap/ui-bootstrap-custom-0.14.3.min.js"></script>
+        <script type="text/javascript" src="ui-bootstrap/ui-bootstrap-custom-tpls-0.14.3.min.js"></script>
         <script type="text/javascript" src="js/util.js"></script>
         <script type="text/javascript" src="js/gps.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
