--- a/www/index.html
+++ b/www/index.html
@@ -31,10 +31,11 @@
         <meta http-equiv="Content-Security-Policy" content="media-src *">
         <meta name="format-detection" content="telephone=no">
         <meta name="msapplication-tap-highlight" content="no">
-        <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
+        <meta name="viewport" content="user-scalable=no,initial-scale=1,maximum-scale=1,minimum-scale=1,width=device-width">
         <link rel="stylesheet" type="text/css" href="css/index.css">
         <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 
+        <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js"></script>
         <title>APP</title>
     </head>
     <body>
@@ -42,10 +43,10 @@
             <ul class="list-group">
                 <li class="list-group-item">
                     <div class="row">
-                        <div class="col-md-6">
+                        <div class="col-xs-6">
                             Start Position
                         </div>
-                        <div class="col-md-6">
+                        <div class="col-xs-6">
                             Lat: {{initLatitude}}
                             <br />
                             Lng: {{initLongitude}}
@@ -54,10 +55,10 @@
                 </li>
                 <li class="list-group-item">
                     <div class="row">
-                        <div class="col-md-6">
+                        <div class="col-xs-6">
                             Running Position
                         </div>
-                        <div class="col-md-6">
+                        <div class="col-xs-6">
                             Lat: {{latitude}}
                             <br />
                             Lng: {{longitude}}
@@ -72,10 +73,10 @@
                 </li>
                 <li class="list-group-item">
                     <div class="row">
-                        <div class="col-md-6">
+                        <div class="col-xs-6">
                             Chrono
                         </div>
-                        <div class="col-md-6">
+                        <div class="col-xs-6">
                                 {{ minute }}:{{ second }}:{{ centiSecond }}
                         </div>
                     </div>
@@ -83,7 +84,7 @@
             </ul>
 
             <div class="row">
-                <div class="col-md-12">
+                <div class="col-xs-12 text-center">
                     <!-- <div class="btn-group" role="group"> -->
                       <button type="button" class="btn btn-success" 
                                 ng-disabled = "!canStart"
@@ -102,11 +103,20 @@
                     <!-- </div> -->
                 </div>
             </div>
+
+            <div ng-show="finish">
+              <!--   Points : <br />
+                    <ul class="list-group">
+                        <li class="list-group-item" ng-repeat="(key, value) in tabPoint">
+                            {{ value.coords.latitude }}, {{ value.coords.longitude }}
+                        </li>
+                    </ul> -->
+
+                <div id="map"></div>
+            </div>
         </div>
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/angular.min.js"></script>
-        <script type="text/javascript" src="ui-bootstrap/ui-bootstrap-custom-0.14.3.min.js"></script>
-        <script type="text/javascript" src="ui-bootstrap/ui-bootstrap-custom-tpls-0.14.3.min.js"></script>
         <script type="text/javascript" src="js/util.js"></script>
         <script type="text/javascript" src="js/gps.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
