Update for Gmap

--- a/www/index.html
+++ b/www/index.html
@@ -35,7 +35,7 @@
         <link rel="stylesheet" type="text/css" href="css/index.css">
         <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 
-        <script type="text/javascript" src="google-map.js"></script>
+        <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js"></script>
         <title>APP</title>
     </head>
     <body>
@@ -104,7 +104,7 @@
                 </div>
             </div>
 
-            <div ng-show="finish">
+            <div>
               <!--   Points : <br />
                     <ul class="list-group">
                         <li class="list-group-item" ng-repeat="(key, value) in tabPoint">
